# aie9-cert-challenge-AskMyBookmark

./: .env.example  .gitignore  README.md  pyproject.toml  start-dev.sh
app/: ask_my_bookmark.py  orchestrator.py  query_cache.py
data/processed/: github_scores.csv  github_scores_annotated.csv
deliverables/: README.md
docs/: START_HERE.md  evaluation_strategy.md  orchestrator_walkthrough.md  retrieval_quality_improvements.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/pages/: index.tsx
frontend/styles/: globals.css
notebooks/: POC_AskMyBookmark.ipynb  POC_AskMyBookmark_cleaner.ipynb  ask_my_bookmark_diagram.ipynb  evaluation.ipynb  fetch_github_data.ipynb  labeling.ipynb  orchestrator.ipynb  retrievers.ipynb  synonym_generation.ipynb
